src/main/java/com/example/Triple_clone/common/error/RestApiException.java
package com.example.Triple_clone.common.error;

import com.example.Triple_clone.common.error.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class RestApiException extends RuntimeException{
    private final ErrorCode errorCode;
}
